fix: wrapper for info and header add z-index Thu 23/03/2023 10:54

--- a/style.css
+++ b/style.css
@@ -19,7 +19,16 @@ body{
 /*************HEADER********************/
 /*************START********************/
 
-
+.header_wrapper_wrapper{
+    min-height: 100vh; /*height window*/
+   background-image: url(./assets/png/start-screen-gradient-background.png);
+    background-size: cover;
+    -moz-background-size: 100%; /* Firefox 3.6+ */
+    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+    -o-background-size: 100%; /* Opera 9.6+ */
+    background-size: 100%;
+    position: relative;
+}
 .header{
     position: absolute;
     top: 0;
@@ -32,6 +41,9 @@ body{
     flex-wrap: wrap;
     justify-content: space-between;
     color: #CDCDCD;
+    position: relative;
+    z-index: 3;
+
 }
 .header__logo{
     display: flex;
@@ -49,7 +61,7 @@ body{
     flex-wrap: wrap;
 }
 .header__nav-item{
-    margin-right: 35px; /***********************PX************************************/
+    margin-right: 35px; 
 
 }
 .header__nav-item:last-child{
@@ -96,25 +108,18 @@ body{
 /*************INFO********************/
 /*************START********************/
 
-.info{
-    padding-top: 60px;
-    min-height: 100vh; /*height window*/
-    background-image: url(./assets/png/start-screen-gradient-background.png);
-    background-size: cover;
-    -moz-background-size: 100%; /* Firefox 3.6+ */
-    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-    -o-background-size: 100%; /* Opera 9.6+ */
-    background-size: 100%;
-}
+
 .info-container{
     background-image: url(./assets/png/start-screen-puppy.png);
     background-repeat: no-repeat;
     background-position: right bottom;
     min-height: 100vh;
     margin-bottom: 94px;
+    position: relative;
+    z-index: 2;
 }
 .info-information{
-    padding-top: 163px;
+    padding-top: 343px;
     width: 460px;
     margin-bottom: 243px;
 }
